add additional keys in .env-example

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,6 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_EV=
+CLOUDINARY_PRESET=
